se reindexaron las páginas

--- a/index.html
+++ b/index.html
@@ -89,39 +89,94 @@
         <div id = "content4">
             <p>Prácticas hechas con Polymer.</p>
             <br>
+            <button onclick="Ej1Polymer()">Ejemplo 1</button>
+            <button onclick="Ej2Polymer()">Ejemplo 2</button>
+            <button onclick="Ej3Polymer()">Ejemplo 3</button>
+            <script>
+                function Ej1Polymer(){
+                    window.location.href = "./4_Polymer/ejemplo1.html";
+                }
+                function Ej2Polymer(){
+                    window.location.href = "./4_Polymer/ejemplo2.html";
+                }
+                function Ej3Polymer(){
+                    window.location.href = "./4_Polymer/ejemplo3.html";
+                }
+            </script>
         </div>
 
         <div id = "content5">
             <p>Prácticas hechas con Mootools.</p>
             <br>
+            <button onclick="Ej1MooTools()">Ejemplo 1</button>
+            <script>
+                function Ej1MooTools(){
+                    window.location.href = "./5_MooTools/mootools.html";
+                }
+            </script>
         </div>
 
         <div id = "content6">
             <p>Prácticas hechas con Webix.</p>
             <br>
+            <button onclick="Ej1Webix()">Ejemplo 1</button>
+            <button onclick="Ej2Webix()">Ejemplo 2</button>
+            <button onclick="Ej3Webix()">Ejemplo 3</button>
+            <script>
+                function Ej1Webix(){
+                    window.location.href = "./6_Webix/webix.html";
+                }
+                function Ej2Webix(){
+                    window.location.href = "./6_Webix/webix2.html";
+                }
+                function Ej3Webix(){
+                    window.location.href = "./6_Webix/webix3.html";
+                }
+            </script>
         </div>
 
         <div id = "content7">
             <p>Prácticas hechas con Ember.</p>
             <br>
+            <button onclick="Ej1Ember()">Ejemplo 1</button>
+            <script>
+                function Ej1Ember(){
+                    window.location.href = "./7_Ember/ember.html";
+                }
+            </script>
         </div>
 
         <div id = "content8">
-            <p>Prácticas hechas con Less.</p>
+            <p>Prácticas hechas con Bootstrap.</p>
             <br>
+            <button onclick="Ej1Bootstrap()">Ejemplo 1</button>
+            <button onclick="Ej2Bootstrap()">Ejemplo 2</button>
+            <script>
+                function Ej1Bootstrap(){
+                    window.location.href = "./9_Bootstrap/index.html";
+                }
+                function Ej2Bootstrap(){
+                    window.location.href = "./9_Bootstrap/ejemplo2.html";
+                }
+            </script>
         </div>
 
         <div id = "content9">
-            <p>Prácticas hechas con Bootstrap.</p>
+            <p>Prácticas hechas con Tailwind.</p>
             <br>
+            <button onclick="Ej1Tailwind()">Ejemplo 1</button>
+            <button onclick="Ej2Tailwind()">Ejemplo 2</button>
+            <script>
+                function Ej1Tailwind(){
+                    window.location.href = "./10_Tailwind/tailwind.html";
+                }
+                function Ej2Tailwind(){
+                    window.location.href = "./10_Tailwind/tailwind2.html";
+                }
+            </script>
         </div>
 
         <div id = "content10">
-            <p>Prácticas hechas con Tailwind.</p>
-            <br>
-        </div>
-
-        <div id = "content11">
             <p>Prácticas hechas con Vue.</p>
             <br>
         </div>
