Se agregó el taller de polymer

--- a/index.html
+++ b/index.html
@@ -88,17 +88,9 @@
             <p>Prácticas hechas con Polymer.</p>
             <br>
             <button onclick="Ej1Polymer()">Ejemplo 1</button>
-            <button onclick="Ej2Polymer()">Ejemplo 2</button>
-            <button onclick="Ej3Polymer()">Ejemplo 3</button>
             <script>
                 function Ej1Polymer(){
-                    window.location.href = "./4_Polymer/ejemplo1.html";
-                }
-                function Ej2Polymer(){
-                    window.location.href = "./4_Polymer/ejemplo2.html";
-                }
-                function Ej3Polymer(){
-                    window.location.href = "./4_Polymer/ejemplo3.html";
+                    window.location.href = "./4_Polymer/index.html";
                 }
             </script>
         </div>
