Se agregó el taller de vue

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
         <div id = "content10">
             <p>Prácticas hechas con Vue.</p>
             <br>
+            <button onclick="Ej1Vue()">Ejemplo 1</button>
+            <script>
+                function Ej1Vue(){
+                    window.location.href = "./11_Vue/vue.html";
+                }
+            </script>
         </div>
 
 
